# buckshot_roulette_helper

./: App.qml  CMakeLists.txt  Screen01.ui.qml  Screen02.ui.qml  controller.cpp  main.cpp  resources.qrc
sources/: controller.cpp  controller.h  main.cpp
